--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nanoid": "^5.1.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
